# Snippet

./: pyproject.toml
alembic/: env.py
alembic/versions/: 53d9e18c5f57_initial_migration.py  688ab3ff3949_update_users.py  823657becf99_user_model.py  927de51fd480_initial_migration.py  a487fe4416b6_.py  d9ad91fed54e_initial_migration.py
src/: main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippet.py  user.py
src/auth/: auth.py
src/core/: config.py  logger.py
src/db/: db.py
src/models/: __init__.py  role.py  snippet.py  user.py
src/schemas/: snippet.py  user.py
src/services/: snippet.py
